header not aligned in some resolutions fixed

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -56,6 +56,12 @@
       }
     }
   }
+
+  .btn{
+    &:hover{
+      background-color: $light-grey;
+    }
+  }
 }
 
 .hero {
@@ -98,5 +104,12 @@
 
   .btn {
     margin-top: 30px;
+  }
+}
+
+.page-section{
+  h1{
+    font-size: 40px;
+    margin-top: 25px;
   }
 }
