--- a/_sass/_sections.scss
+++ b/_sass/_sections.scss
@@ -73,7 +73,7 @@ body {
 
   a {
     color: #ffffff;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 500;
     letter-spacing: 1px;
     padding: 10px;
